--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,6 +5,8 @@
   "exports": {
     "./*": "./src/*.tsx"
   },
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component",
