--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
 JWT_SECRET="supersecretdevkey"
-
+API_BASE_URL='http://localhost:4000'
+WS_URL='ws://localhost:4001'
+KAFKA_BROKER_URL=localhost:9092
